--- a/style.css
+++ b/style.css
@@ -2,4 +2,24 @@ body
 {
     background-color: #303030;
     color:black;
+    font-family: 'Montserrat', sans-serif;
+    font-size:2px;
+}
+.wrapper
+{
+    width:100%;
+}
+.header
+{
+    width:100%;
+    /*padding only in vertical axis*/
+    padding: 40px 0;
+}
+.logo
+{
+    width:450px;
+    font-size:30px;
+    margin-left:auto;
+    margin-right:auto;
+    color:white;
 }
