--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@ body
     background-color: #303030;
     color:black;
     font-family: 'Montserrat', sans-serif;
-    font-size:2px;
+    font-size:20px;
+    /*nadpisanie kaskadowosci*/
+    margin :0 !important;
 }
 .wrapper
 {
@@ -22,4 +24,25 @@ body
     margin-left:auto;
     margin-right:auto;
     color:white;
+}
+.nav
+{
+    width:100%;
+    padding:10px 0;
+    background-color: crimson;
+    text-align:center;
+    border-top: 2px solid #751b1b;
+    border-bottom: 2px solid #751b1b;
+    height: 40px;
+    color: black;
+}
+.content
+{
+    width:1000px;
+    margin-left:auto;
+    margin-right:auto;
+    text-align:justify;
+    background-color: yellow;
+    height: 200px;
+    color: black;
 }
