--- a/style.css
+++ b/style.css
@@ -46,3 +46,58 @@ body
     height: 200px;
     color: black;
 }
+.socials
+{
+    width:100%;
+    text-align:center;
+    background-color: #292929;
+
+}
+.socialsdivs
+{
+    width:1000px;
+    margin-left: auto;
+    margin-right:auto;
+    text-align: center;
+}
+.fb
+{
+    width: 250px;
+    height:155px;
+    float: left;
+}
+.fb:hover
+{
+    background-color: #4668b3;
+}
+.yt
+{
+    width: 250px;
+    height:155px;
+    float: left;
+}
+.yt:hover
+{
+    background-color: #d94348;
+}
+.tw
+{
+    width: 250px;
+    height:155px;
+    float: left;
+}
+.tw:hover
+{
+    background-color: #3095d3;
+}
+.gp
+{
+    width: 250px;
+    height:155px;
+    float: left;
+}
+.gp:hover
+{
+    background-color: #d95333;
+}
+
