--- a/style2.css
+++ b/style2.css
@@ -41,5 +41,44 @@ body
 }
 #spis
 {
-    width:880px;
+    width:780px;
+    padding-left: 100px;
+}
+ol
+{
+    margin-top:5px;
+}
+ol > li
+{
+    font-size: 22px;
+    text-transform: uppercase;
+    font-weight: 700;
+    padding:5px;
+    letter-spacing: 3px;
+}
+ol>li>ul
+{
+    font-size:18px;
+    text-transform: none;
+    font-weight:400px;
+    padding:0px;
+    letter-spacing:0px;
+    margin-top:5px;
+    margin-left: 30px;
+    list-style-type: disc;
+}
+ol>li>ul>li
+{
+    margin:0px;
+  
+}
+ol>li>il>li:before
+{
+    color: darkolivegreen;
+}
+.slajd
+{
+    /*y x*/
+    padding:20px 40px;
+    text-align:justify;
 }
