--- a/style2.css
+++ b/style2.css
@@ -82,3 +82,29 @@ ol>li>il>li:before
     padding:20px 40px;
     text-align:justify;
 }
+h1
+{
+    font-size:24px;
+    text-transform: uppercase;
+    font-weight: 800px;
+}
+a:link
+{
+    color:black;
+    text-decoration: none;
+}
+a:visited
+{
+    color:black;
+    text-decoration: none;
+}
+a:hover
+{
+    color:darkolivegreen;
+    text-decoration: underline;
+}
+a:active
+{
+    color:black;
+    text-decoration: none;
+}
