Adding scrolling up button

--- a/style2.css
+++ b/style2.css
@@ -108,3 +108,14 @@ a:active
     color:black;
     text-decoration: none;
 }
+.scrollup
+{
+    width: 64px;
+    height:64px;
+    text-decoration: none;
+    background: url("img/up.png") no-repeat 0px 0px;
+    /*fized - na stale*/
+    position: fixed;
+    right : 50px;
+    bottom: 50px;
+}
